Fixed the overflow problem

--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -20,7 +20,8 @@ table tr {
 
 table td {
     background-color: #ffffff;
-    overflow: hidden;
+    /*overflow-x: visible;*/
+    /*overflow-y: hidden;*/
 }
 
 table tr:hover td {
